Invoked gradle initscript to upgrade project dependencies via OpenRew… (#408)
* Invoked gradle initscript to upgrade project dependencies via OpenRewrite

* Upgrade spring-cloud-dependencies, spring-boot, and wire-mock versions